{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 283,
  "lineage": "fdc11032-f9be-1f59-54e7-c61eb2a9885f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:targetgroup/TargetGroup/43fb1c12f359dd92-20230409140604163900000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:targetgroup/TargetGroup/43fb1c12f359dd92",
            "target_id": "i-0f393e78e4ef5e4ea"
          },
          "dependencies": [
            "aws_instance.gitea_server",
            "aws_lb_target_group.target_group",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.assessment_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d4013715847135c",
            "association_id": "eipassoc-004cb4ac23a627d6b",
            "domain": "vpc",
            "id": "eipalloc-09d4013715847135c",
            "instance": "i-0f393e78e4ef5e4ea",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-03bdcc3e8d436db14",
            "private_dns": "ip-10-0-0-121.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.121",
            "public_dns": "ec2-13-213-193-74.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.193.74",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.gitea_server",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.assessment_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitea_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a72af05d27b49ccb",
            "arn": "arn:aws:ec2:ap-southeast-1:849429060523:instance/i-0f393e78e4ef5e4ea",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f393e78e4ef5e4ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "crossrt_aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03bdcc3e8d436db14",
            "private_dns": "ip-10-0-0-121.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.121",
            "public_dns": "ec2-13-213-193-74.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.193.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04298f577b4c151a2",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080f7c886a4840138",
            "tags": {
              "Name": "gitea-server"
            },
            "tags_all": {
              "Name": "gitea-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c434862807b4a64"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.assessment_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:849429060523:internet-gateway/igw-0727e2fff09c83dcb",
            "id": "igw-0727e2fff09c83dcb",
            "owner_id": "849429060523",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-0a8149ab632a19371"
          },
          "dependencies": [
            "aws_vpc.assessment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_loan_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:loadbalancer/app/gitea-alb/916e8f9fd47edc7d",
            "arn_suffix": "app/gitea-alb/916e8f9fd47edc7d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "gitea-alb-1368232233.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:loadbalancer/app/gitea-alb/916e8f9fd47edc7d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gitea-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09c434862807b4a64"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-009829e94f07c34a1"
              },
              {
                "subnet_id": "subnet-07ff4b5994e2afbd4"
              },
              {
                "subnet_id": "subnet-080f7c886a4840138"
              }
            ],
            "subnets": [
              "subnet-009829e94f07c34a1",
              "subnet-07ff4b5994e2afbd4",
              "subnet-080f7c886a4840138"
            ],
            "vpc_id": "vpc-0a8149ab632a19371",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.assessment_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:listener/app/gitea-alb/916e8f9fd47edc7d/a638d2426056592c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:listener/app/gitea-alb/916e8f9fd47edc7d/a638d2426056592c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:loadbalancer/app/gitea-alb/916e8f9fd47edc7d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_loan_balancer",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.assessment_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:listener/app/gitea-alb/916e8f9fd47edc7d/44130b562ec9feb5",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:849429060523:certificate/ef4b3b54-4203-4dcb-bf83-dcddb5b590d2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:targetgroup/TargetGroup/43fb1c12f359dd92",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:listener/app/gitea-alb/916e8f9fd47edc7d/44130b562ec9feb5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:loadbalancer/app/gitea-alb/916e8f9fd47edc7d",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.main_cert",
            "aws_lb.application_loan_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.assessment_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:targetgroup/TargetGroup/43fb1c12f359dd92",
            "arn_suffix": "targetgroup/TargetGroup/43fb1c12f359dd92",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:849429060523:targetgroup/TargetGroup/43fb1c12f359dd92",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a8149ab632a19371"
          },
          "dependencies": [
            "aws_vpc.assessment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0727e2fff09c83dcb",
            "id": "r-rtb-0a63ca3ef091843511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a63ca3ef09184351",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.assessment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:849429060523:route-table/rtb-0a63ca3ef09184351",
            "id": "rtb-0a63ca3ef09184351",
            "owner_id": "849429060523",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0727e2fff09c83dcb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RouteTable"
            },
            "tags_all": {
              "Name": "Public-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8149ab632a19371"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.assessment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a80f709737c1db33",
            "route_table_id": "rtb-0a63ca3ef09184351",
            "subnet_id": "subnet-080f7c886a4840138"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.assessment_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffabb072e5bccd56",
            "route_table_id": "rtb-0a63ca3ef09184351",
            "subnet_id": "subnet-07ff4b5994e2afbd4"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.assessment_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0537ee7814e39ef70",
            "route_table_id": "rtb-0a63ca3ef09184351",
            "subnet_id": "subnet-009829e94f07c34a1"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.assessment_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:849429060523:security-group/sg-09c434862807b4a64",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c434862807b4a64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "175.145.249.144/32"
                ],
                "description": "Ingress rules for port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "assessment-sg",
            "name_prefix": "",
            "owner_id": "849429060523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS security group dynamic block"
            },
            "tags_all": {
              "Name": "AWS security group dynamic block"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8149ab632a19371"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.assessment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:849429060523:subnet/subnet-080f7c886a4840138",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080f7c886a4840138",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "849429060523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Subnet-0"
            },
            "tags_all": {
              "Name": "public-Subnet-0"
            },
            "vpc_id": "vpc-0a8149ab632a19371"
          },
          "dependencies": [
            "aws_vpc.assessment_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:849429060523:subnet/subnet-07ff4b5994e2afbd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ff4b5994e2afbd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "849429060523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Subnet-1"
            },
            "tags_all": {
              "Name": "public-Subnet-1"
            },
            "vpc_id": "vpc-0a8149ab632a19371"
          },
          "dependencies": [
            "aws_vpc.assessment_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:849429060523:subnet/subnet-009829e94f07c34a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009829e94f07c34a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "849429060523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Subnet-2"
            },
            "tags_all": {
              "Name": "public-Subnet-2"
            },
            "vpc_id": "vpc-0a8149ab632a19371"
          },
          "dependencies": [
            "aws_vpc.assessment_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "assessment_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:849429060523:vpc/vpc-0a8149ab632a19371",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4d0eed2664e1586",
            "default_route_table_id": "rtb-06bf6d50c5f947d9f",
            "default_security_group_id": "sg-0960f006839983b07",
            "dhcp_options_id": "dopt-0155b864",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8149ab632a19371",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06bf6d50c5f947d9f",
            "owner_id": "849429060523"
          }
        }
      ]
    }
  ]
}